Переделано формирование печатей в отдельные документы
И сохрание/загрузка печатей из файлов